# QT-personal

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Calc/: mainwindow.cpp  mainwindow.h
Stopwatch/: CMakeLists.txt  Main.qml  main.cpp  stopwatch.qrc
Stopwatch2/: CMakeLists.txt  Main.qml  main.cpp  stopwatch2.qrc
flamingo_animation/: CMakeLists.txt  Component_test.qml  FlamingoAnimation.qml  FlamingoAnimationBackup.qml  FlamingoLoadingAnimation.qml  flam_resource.qrc  main.cpp
